fix alignment issues

--- a/public/css/main-chatbot.css
+++ b/public/css/main-chatbot.css
@@ -61,7 +61,6 @@ body {
   top: -3px;
   position: relative;
   display: inline-block;
-  background-image: url('/images/profile_placeholder.png');
   background-repeat: no-repeat;
   width: 40px;
   height: 40px;
@@ -155,7 +154,7 @@ main {
   border-color: #006DAE;
   border-width: 0.1rem;
   border-style: solid;
-  margin-left: 20px;
+  margin-left: 10px;
   float: left;
 }
 .receiver {
@@ -185,6 +184,7 @@ main {
   margin-bottom: 10px;
   margin-left: 10px;
   margin-right: 15px;
+  line-height: normal;
 }
 #message-form {
   display: flex;
